# pharma-api

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
pharma/: __init__.py  aggregate.py  aggregations.py  api.py  main.py  models.py  prompt_templates.py  settings.py  utils.py
pharma/middleware/: logging.py
pharma/routers/: agent.py  health.py  llm.py
pharma/schemas/: health.py
pharma/services/: agent.py  inventory.py
